Fixing jumpy menu-toggle button and removing bloat.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,7 +23,6 @@
 			box-shadow:none;
 
 			top:0;
-			left:$horizontalBase;
 			width:$lineheight*2;
 			height:$lineheight*2;
 			background:transparent;
